[package]
name = "time-now"
version = "0.1.1"
edition = "2024"
authors = ["Rafiudeen Chozhan Kumarasamy", "<kisans@proton.me>"]
description = "Get current time as seconds or milli/micro/nano seconds, since unix epoch time, using single function call. Pure Rust std library based. No dependencies on any other crate. Safe and Lightweight (1.8 kb)."
repository = "https://github.com/rafialhamd/time-now"
license = "MIT OR Apache-2.0"
keywords = ["time", "now", "current-time", "date", "duration"]
categories = ["date-and-time"]

[dependencies]
